deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaffold-dotnet
spec:
  # setting replicas desired state in manifest will disable temporary dynameic scaling by `kubectl scale` command 
  # in production env, update this replicas value in manifest file and then use `kubectl apply` to scale pod up/down
  replicas: 4
  selector:
    matchLabels:
      app: skaffold-dotnet
  template:
    metadata:
      labels:
        app: skaffold-dotnet
    spec:
      containers:
        - name: hello-containers
          image: localhost:5000/skaffold-dotnet-hello:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5001
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
        - name: world-container
          image: localhost:5000/skaffold-dotnet-world:v0.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
      volumes:
        - name: config-volume
          configMap:
            name: skaffold-dotnet-configmap-mount
