kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaffold-dotnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skaffold-dotnet
  template:
    metadata:
      labels:
        app: skaffold-dotnet
    spec:
      containers:
        - name: hello-containers
          image: skaffold-dotnet-hello:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
        - name: world-container
          image: skaffold-dotnet-world:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
