service.yml
apiVersion: v1
kind: Service
metadata:
  name: skaffold-dotnet
spec:
  type: NodePort
  selector:
    app: skaffold-dotnet
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
