ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skaffold-dotnet-ingress
  labels:
    name: my-ingress
spec:
  rules:
  - host: local-k8s.test
    http:
      paths:
      - pathType: Prefix
        path: "/test-hello"
        backend:
          service:
            name: skaffold-dotnet
            port: 
              number: 8082
